-- Esquema funcional de Minimarket Segu para HSQLDB 2.7.4.
-- En desarrollo Hibernate lo crea/actualiza desde las anotaciones JPA.

CREATE TABLE CARGO (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(50) NOT NULL UNIQUE, DESCRIPCION VARCHAR(150),
    SUELDOBASE NUMERIC(12,2) NOT NULL, ESTADO BOOLEAN NOT NULL, USUARIOREGISTRO VARCHAR(30)
);
CREATE TABLE CATEGORIAPRODUCTO (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(40) NOT NULL UNIQUE, DESCRIPCION VARCHAR(150), ESTADO BOOLEAN NOT NULL,
    FECHAREGISTRO TIMESTAMP, USUARIOREGISTRO VARCHAR(30)
);
CREATE TABLE MARCA (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(40) NOT NULL UNIQUE, PAISORIGEN VARCHAR(40), DESCRIPCION VARCHAR(150),
    ESTADO BOOLEAN NOT NULL, FECHAREGISTRO TIMESTAMP
);
CREATE TABLE METODOPAGO (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(40) NOT NULL UNIQUE, DESCRIPCION VARCHAR(150), ESTADO BOOLEAN NOT NULL,
    FECHAREGISTRO TIMESTAMP, USUARIOREGISTRO VARCHAR(30)
);
CREATE TABLE ROL (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(40) NOT NULL UNIQUE, DESCRIPCION VARCHAR(150), ESTADO BOOLEAN NOT NULL,
    FECHAREGISTRO TIMESTAMP, USUARIOREGISTRO VARCHAR(30)
);
CREATE TABLE CLIENTE (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(80) NOT NULL, DNI VARCHAR(8) NOT NULL UNIQUE, RUC VARCHAR(11) UNIQUE,
    RAZONSOCIAL VARCHAR(100), TIPOCLIENTE VARCHAR(12) NOT NULL, DIRECCION VARCHAR(120),
    TELEFONO VARCHAR(15), CORREO VARCHAR(60) UNIQUE, FECHAREGISTRO TIMESTAMP
);
CREATE TABLE PROVEEDOR (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(80) NOT NULL, RUC VARCHAR(11) NOT NULL UNIQUE, DIRECCION VARCHAR(120),
    TELEFONO VARCHAR(15), CORREO VARCHAR(60) UNIQUE, ESTADO BOOLEAN NOT NULL, FECHAREGISTRO TIMESTAMP
);
CREATE TABLE EMPLEADO (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(80) NOT NULL, DNI VARCHAR(8) NOT NULL UNIQUE, DIRECCION VARCHAR(120),
    TELEFONO VARCHAR(15), CORREO VARCHAR(60) UNIQUE, FECHAINGRESO TIMESTAMP,
    CARGO_ID BIGINT NOT NULL, CONSTRAINT FK_EMPLEADO_CARGO FOREIGN KEY (CARGO_ID) REFERENCES CARGO(ID)
);
CREATE TABLE PRODUCTO (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    NOMBRE VARCHAR(50) NOT NULL UNIQUE, DESCRIPCION VARCHAR(200),
    PRECIOCOMPRA NUMERIC(12,2) NOT NULL CHECK (PRECIOCOMPRA >= 0),
    PRECIOVENTA NUMERIC(12,2) NOT NULL CHECK (PRECIOVENTA > 0),
    PRECIOMAYORISTA NUMERIC(12,2) NOT NULL CHECK (PRECIOMAYORISTA >= 0),
    STOCK INTEGER NOT NULL CHECK (STOCK >= 0), STOCKMINIMO INTEGER NOT NULL CHECK (STOCKMINIMO >= 0),
    CATEGORIA_ID BIGINT NOT NULL, MARCA_ID BIGINT NOT NULL,
    CONSTRAINT FK_PRODUCTO_CATEGORIA FOREIGN KEY (CATEGORIA_ID) REFERENCES CATEGORIAPRODUCTO(ID),
    CONSTRAINT FK_PRODUCTO_MARCA FOREIGN KEY (MARCA_ID) REFERENCES MARCA(ID)
);
CREATE TABLE USUARIOSISTEMA (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    USERNAME VARCHAR(30) NOT NULL UNIQUE, PASSWORD VARCHAR(100) NOT NULL,
    EMPLEADO_ID BIGINT NOT NULL, ESTADO BOOLEAN NOT NULL, FECHAREGISTRO TIMESTAMP, ULTIMOACCESO TIMESTAMP,
    CONSTRAINT FK_USUARIO_EMPLEADO FOREIGN KEY (EMPLEADO_ID) REFERENCES EMPLEADO(ID)
);
CREATE TABLE USUARIOROL (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    USUARIO_ID BIGINT NOT NULL, ROL_ID BIGINT NOT NULL, FECHAASIGNACION TIMESTAMP,
    ESTADO BOOLEAN NOT NULL, USUARIOREGISTRO VARCHAR(30), UNIQUE (USUARIO_ID, ROL_ID),
    CONSTRAINT FK_USUARIOROL_USUARIO FOREIGN KEY (USUARIO_ID) REFERENCES USUARIOSISTEMA(ID),
    CONSTRAINT FK_USUARIOROL_ROL FOREIGN KEY (ROL_ID) REFERENCES ROL(ID)
);
CREATE TABLE COMPRA (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    FECHA TIMESTAMP, PROVEEDOR_ID BIGINT NOT NULL, TIPOCOMPROBANTE VARCHAR(20) NOT NULL,
    NUMEROCOMPROBANTE VARCHAR(20) NOT NULL, ESTADO BOOLEAN NOT NULL, PROCESADA BOOLEAN NOT NULL,
    USUARIOREGISTRO VARCHAR(30), UNIQUE (TIPOCOMPROBANTE, NUMEROCOMPROBANTE),
    CONSTRAINT FK_COMPRA_PROVEEDOR FOREIGN KEY (PROVEEDOR_ID) REFERENCES PROVEEDOR(ID)
);
CREATE TABLE DETALLE_COMPRA (
    COMPRA_ID BIGINT NOT NULL, LINEA INTEGER NOT NULL, PRODUCTO_ID BIGINT NOT NULL,
    CANTIDAD INTEGER NOT NULL CHECK (CANTIDAD > 0), PRECIO NUMERIC(12,2) NOT NULL CHECK (PRECIO > 0),
    PRIMARY KEY (COMPRA_ID, LINEA),
    CONSTRAINT FK_DETALLE_COMPRA FOREIGN KEY (COMPRA_ID) REFERENCES COMPRA(ID),
    CONSTRAINT FK_DETALLE_COMPRA_PRODUCTO FOREIGN KEY (PRODUCTO_ID) REFERENCES PRODUCTO(ID)
);
CREATE TABLE VENTA (
    ID BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    FECHA TIMESTAMP, CLIENTE_ID BIGINT NOT NULL, EMPLEADO_ID BIGINT NOT NULL, METODOPAGO_ID BIGINT NOT NULL,
    TIPOCOMPROBANTE VARCHAR(12) NOT NULL, NUMEROCOMPROBANTE VARCHAR(20) NOT NULL,
    PROCESADA BOOLEAN NOT NULL, UNIQUE (TIPOCOMPROBANTE, NUMEROCOMPROBANTE),
    CONSTRAINT FK_VENTA_CLIENTE FOREIGN KEY (CLIENTE_ID) REFERENCES CLIENTE(ID),
    CONSTRAINT FK_VENTA_EMPLEADO FOREIGN KEY (EMPLEADO_ID) REFERENCES EMPLEADO(ID),
    CONSTRAINT FK_VENTA_METODO FOREIGN KEY (METODOPAGO_ID) REFERENCES METODOPAGO(ID)
);
CREATE TABLE DETALLE_VENTA (
    VENTA_ID BIGINT NOT NULL, LINEA INTEGER NOT NULL, PRODUCTO_ID BIGINT NOT NULL,
    CANTIDAD INTEGER NOT NULL CHECK (CANTIDAD > 0), PRECIO NUMERIC(12,2) NOT NULL CHECK (PRECIO > 0),
    PRIMARY KEY (VENTA_ID, LINEA),
    CONSTRAINT FK_DETALLE_VENTA FOREIGN KEY (VENTA_ID) REFERENCES VENTA(ID),
    CONSTRAINT FK_DETALLE_VENTA_PRODUCTO FOREIGN KEY (PRODUCTO_ID) REFERENCES PRODUCTO(ID)
);

CREATE INDEX IDX_CLIENTE_NOMBRE ON CLIENTE(NOMBRE);
CREATE INDEX IDX_PRODUCTO_STOCK ON PRODUCTO(STOCK);
CREATE INDEX IDX_PRODUCTO_CATEGORIA ON PRODUCTO(CATEGORIA_ID);
CREATE INDEX IDX_COMPRA_FECHA ON COMPRA(FECHA);
CREATE INDEX IDX_VENTA_FECHA ON VENTA(FECHA);
